--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Netflix- Watch TV Shows Online, Watch Movies Online</title>
+   <script src="https://kit.fontawesome.com/3f5c77a5c2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header class="showcase">
+        <div class="showcase-top">
+        <img src="imgs/logo.png" alt="logo" >
+        <a href="#" class="btn btn-rounded">Sign In</a>
+        </div>
+        <div class="showcase-content">
+        <h1>See what's new</h1>
+        <p>Watch anywhere. Cancel anytime</p>
+        <a href="#" class="btn btn-xl">
+            Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i>
+        </div>
+
+
+
+    </header>
+    
+
+
+
+
+
+
     
 </body>
 </html>
